腾讯4+hr shopee hr 米哈游1

--- a/docs/我的面经.md
+++ b/docs/我的面经.md
@@ -714,7 +714,7 @@ https://zhuanlan.zhihu.com/p/48385127
 6. http多路复用和pipelining的区别？
     - https://blog.csdn.net/sd19871122/article/details/106908140
 
-# shopee3面 9.18日
+# shopee3面 9.14日
 1. 狂问项目
 2. 项目技术上比较复杂的场景？
 3. 为什么用kafka？
@@ -722,6 +722,14 @@ https://zhuanlan.zhihu.com/p/48385127
 5. 秒杀系统场景哪儿比较难？
 6. 短连接生成器？  怎么做？？？   出现哈希冲突了怎么办？
 7. 数据不一致问题如何解决？
+
+# shopee hr面 9.18日
+1. 怎么知道shopee的，为什么想来shopee？
+2. 在国外交流的体验？
+3. 两段经历学到了什么，有什么感受。
+4. 自己有哪些需要提高和需要进步的地方？
+    - 完成需求的时候，考虑扩展性，让其他人很快的接手。。。
+5. 期望的薪资
 
 # 滴滴1-3面 9.1日
 滴滴1面
@@ -903,3 +911,46 @@ https://blog.csdn.net/cyl937/article/details/53585007
 11. epoll select
 12. 为什么map要用红黑树作为数据结构呢？
 13. 二分查找为什么是logn复杂度。
+
+四面 9.28日
+1. 有了头条的offer为什么还考虑腾讯的机会？
+2. 详细介绍一个项目？
+3. 项目的挑战？
+4. 希望工作有什么样的挑战，提高哪种能力。
+5. shopee 美团 字节 有满足期望的工作的嘛？
+6. 有没有用过一些云产品？
+7. linux看cpu使用情况？ 除了top还有没有其他的？
+8. 先写mysql再写redis，写redis失败了
+
+hr面 10.10日
+1. 自我介绍
+2. 为什么两端经历都是做后台方向？
+3. 有没有做过的印象深刻的项目，详细讲一下？
+4. 做这个项目碰到的困难和问题是什么？
+5. 通过什么样的办法，来快速上手这个项目？
+6. 遇到线上问题怎么解决的？
+7. 俩段经历的区别？
+8. 通过一些什么其他途径或者渠道来帮助你去学习计算机的知识？
+9. 对于未来的职业规划？
+
+米哈游 1面9.24日
+1. java里抽象类和接口有什么区别？
+2. java里的反射？
+3. 列举一些排序算法，说一下时间复杂度啥啥的？
+4. 红黑树和AVL树？
+5. 在无向图里找俩点最短路径， 介绍floyed和迪杰克思拉算法。
+6. 如何区分大端和小端？
+7. 进程和线程的区别？ 协程？
+8. 协程相对于线程的优势？
+9. 阻塞和非阻塞的区别？
+10. 操作系统的栈内存和堆内存的区别？
+11. tcp和udp的区别，应用场景？
+12. dns为什么用udp？ dns的过程？
+13. 索引为啥用b+树？
+14. 什么是事务，事务的特性？
+15. sql中的触发器知道嘛？
+16. 想在数据库里删除， drop delete truncate，有什么区别？
+17. 有用过什么设计模式嘛？
+18. 什么是单例模式？
+19. 用单例模式的好处？
+
