操作系统虚拟内存结构

--- a/docs/c-4.1操作系统.md
+++ b/docs/c-4.1操作系统.md
@@ -360,6 +360,9 @@ https://zhuanlan.zhihu.com/p/141602175
 
 - 这里值得重复一遍，Unix/Linux系统内部不使用文件名，而使用inode号码来识别文件。对于系统来说，文件名只是inode号码便于识别的别称或者绰号。表面上，用户通过文件名，打开文件。实际上，系统内部这个过程分成三步：首先，系统找到这个文件名对应的inode号码；其次，通过inode号码，获取inode信息；最后，根据inode信息，找到文件数据所在的block，读出数据。
 
+# 21. 操作系统虚拟地址
+![](figure/memory.png)
+
 # 一些计算组成原理
 - 本地代码需要加载进内存才可以运行，内存中存储着构成本地代码的指令和数据。程序运行时，CPU从内存中将指令和数据读出来，然后放在CPU内部的寄存器中进行处理。
 
