--- a/docs/c-4.3计算机组成原理.md
+++ b/docs/c-4.3计算机组成原理.md
@@ -1,2 +1,14 @@
 # 1. 总线主要的功能和分类？
 - 总线的功能是解决不同设备之间的通信问题。可以分为：片内总线、系统总线，其中系统总线可以分为数据总线、地址总线、控制总线。
+
+# 2. 计算机的指令一般由操作码和地址码组成，那么计算机指令可以分类为几种类型？
+移位操作指令、数据传输指令、控制指令、算术逻辑操作指令。
+
+对计算机指令数据的寻址有哪几种方式？
+立即寻址、直接寻址、间接寻址。
+
+计算机的运算器主要由什么组成？控制器呢？
+控制器主要由：程序计数器、时序发生器、指令译码器、寄存器、总线组成。运算器主要由：数据缓冲器、ALU、寄存器、状态字寄存器、总线组成。
+
+请简述计算机指令的执行过程。
+指令执行过程：取指令-分析指令-执行指令
