--- a/docs/c-4.3计算机组成原理.md
+++ b/docs/c-4.3计算机组成原理.md
@@ -8,7 +8,13 @@
 立即寻址、直接寻址、间接寻址。
 
 计算机的运算器主要由什么组成？控制器呢？
-控制器主要由：程序计数器、时序发生器、指令译码器、寄存器、总线组成。运算器主要由：数据缓冲器、ALU、寄存器、状态字寄存器、总线组成。
+
+控制器主要由：程序计数器、时序发生器、指令译码器、寄存器、总线组成。
+
+运算器主要由：数据缓冲器、ALU、寄存器、状态字寄存器、总线组成。
 
 请简述计算机指令的执行过程。
 指令执行过程：取指令-分析指令-执行指令
+
+# 3. 指令和数据
+- 本地代码需要加载进内存才可以运行，内存中存储着构成本地代码的指令和数据。程序运行时，CPU从内存中将指令和数据读出来，然后放在CPU内部的寄存器中进行处理。
