--- a/docs/c-4.3计算机组成原理.md
+++ b/docs/c-4.3计算机组成原理.md
@@ -1,6 +1,26 @@
 # 1. 总线主要的功能和分类？
 - 总线的功能是解决不同设备之间的通信问题。可以分为：片内总线、系统总线，其中系统总线可以分为数据总线、地址总线、控制总线。
 
+- 地址总线？
+    - cpu通过地址总线来指定存储单元，地址总线能传送多少个不同的信息，cpu就可以对多少个存储单元进行寻址。
+- 数据总线？
+    - cpu与内存或者其他外部器件之间的数据传送通过数据总线进行，数据总线的宽度决定了cpu和外界的数据传送速度。
+    8跟数据总线一次可以传送8个二进制数据。16跟数据总线一次可以传送16个二进制数据（二个字节）。
+- 控制总线？
+    - 有多少跟控制总线，就意味着cpu对外部器件有多少种控制。控制总线的宽度决定了cpu对外部的控制能力。
+
+- 典型cpu的组成
+    - 运算器
+        - 负责进行信息处理
+    - 控制器
+        - 控制各种器件进行工作
+    - 寄存器
+        - 寄存器进行信息存储
+    - 片内总线负责cpu内部各个部件的联系
+    - 系统总线负责cpu和主板上各个部件的联系
+        
+
+
 # 2. 计算机的指令一般由操作码和地址码组成，那么计算机指令可以分类为几种类型？
 移位操作指令、数据传输指令、控制指令、算术逻辑操作指令。
 
@@ -18,3 +38,6 @@
 
 # 3. 指令和数据
 - 本地代码需要加载进内存才可以运行，内存中存储着构成本地代码的指令和数据。程序运行时，CPU从内存中将指令和数据读出来，然后放在CPU内部的寄存器中进行处理。
+
+
+# 
