--- a/docs/c-4.4汇编.md
+++ b/docs/c-4.4汇编.md
@@ -1,3 +1,48 @@
+
+# 1. 笔记
 https://zhuanlan.zhihu.com/c_1235568790944612352
 
-# 1. 
+
+# 1. 第一章 基础知识
+- 总线主要的功能和分类？
+    - 总线的功能是解决不同设备之间的通信问题。可以分为：片内总线、系统总线，其中系统总线可以分为数据总线、地址总线、控制总线。
+    - 地址总线？
+        - cpu通过地址总线来指定存储单元，地址总线能传送多少个不同的信息，cpu就可以对多少个存储单元进行寻址。
+    - 数据总线？
+        - cpu与内存或者其他外部器件之间的数据传送通过数据总线进行，数据总线的宽度决定了cpu和外界的数据传送速度。
+        8跟数据总线一次可以传送8个二进制数据。16跟数据总线一次可以传送16个二进制数据（二个字节）。
+    - 控制总线？
+        - 有多少跟控制总线，就意味着cpu对外部器件有多少种控制。控制总线的宽度决定了cpu对外部的控制能力。
+
+# 2. 第二章 寄存器
+- 当cpu要访问内存的时候，由段寄存器提供内存单元的段地址。 8086CPU有4个段寄存器，CS来存放指令的段地址。
+- CS存放指令段地址，IP存放指令偏移地址。任意时刻，CPU将CS：IP指向的内容当作指令执行。
+
+# 3. 第三章 寄存器（内存访问）
+- 数据地址
+    - 字在内存中存储的时候，要用两个地址连续的内存单元来存放，字的低位字节单元存放在低地址内存中，
+    高位字节存放在高地址内存中。
+    - 用mov ax, [0]。 用mov指令时，可以在mov指令中只给出单元的偏移地址，段地址默认在DS寄存器中。
+
+- 栈地址
+    - 在SS，SP中存放栈顶的段地址和偏移地址
+    - push的时候，先SP=SP-2，然后再向SS：SP指向的字单元送入数据。
+    - pop的时候，先从SS：SP指向的字单元中读取数据 然后再SP=SP+2
+    - 任意时刻，SS：SP指向栈顶元素
+    - 8086CPU只负责记录栈顶，栈空间的大小我们自己管理。
+    
+- 段的综述：
+    - 对于数据段，将其段地址放入DS中，用mov add sub等访问内存单元时，CPU就将我们定义的数据段的内容当作数据来访问。
+    - 对于代码段，将其段地址放入CS中，将段中的第一条指令的偏移地址放在IP中，这样CPU就将执行我们定义的代码段中的指令。
+    - 对于栈段，将其段地址放入SS中，栈顶元素偏移地址放在SP中，这样push pop的时候，就将我们定义的栈段当作栈空间来使用。
+    
+    - 一段内存，即可以是代码的存储空间，又可以是数据存储空间，还可以是栈空间，取决于CPU中寄存器的设置。即CS，DS，SS，IP，SP的值。
+    
+# 4. 第四章 第一个程序
+- 操作系统的外壳
+    - 系统的shell，commond也就是shell，我们输入cd ls等命令的时候，
+    这些命令由commond执行。我们执行.exe文件的时候，commond将这个文件加载进内存，然后设置寄存器
+    cs，ip指向程序的入口。然后cpu运行程序，程序运行结束后，返回到commond中。
+
+- 汇编程序从写到执行的过程
+    - 编程汇编程序 -》 编译 -》 链接 -》 1.exe
