--- a/docs/c-4.4汇编.md
+++ b/docs/c-4.4汇编.md
@@ -36,7 +36,7 @@ https://zhuanlan.zhihu.com/c_1235568790944612352
     - 对于代码段，将其段地址放入CS中，将段中的第一条指令的偏移地址放在IP中，这样CPU就将执行我们定义的代码段中的指令。
     - 对于栈段，将其段地址放入SS中，栈顶元素偏移地址放在SP中，这样push pop的时候，就将我们定义的栈段当作栈空间来使用。
     
-    - 一段内存，即可以是代码的存储空间，又可以是数据存储空间，还可以是栈空间，取决于CPU中寄存器的设置。即CS，DS，SS，IP，SP的值。
+    - 一段内存，即可以是代码的存储空间，又可以是数据存储空间，还可以是栈空间，取决于CPU中寄存器的设置。即CS，IP，DS，SS，SP的值。
     
 # 4. 第四章 第一个程序
 - 操作系统的外壳
@@ -46,3 +46,21 @@ https://zhuanlan.zhihu.com/c_1235568790944612352
 
 - 汇编程序从写到执行的过程
     - 编程汇编程序 -》 编译 -》 链接 -》 1.exe
+    
+# 5. 第五章 [BX]和loop指令
+
+# 6. 第六章 包含多个段的程序
+- 如何找到程序的入口？
+    - 若要cpu按照我们的安排行事，我们在源程序中用end start来说明了程序的入口就是start。
+    这个入口将被写进可执行文件的描述信息，可执行文件被加载进内存之后，cpu的cs:ip就指向了这个入口。
+    从而开始执行程序的第一条指令。
+    
+- cpu如何访问栈空间？
+    - mov ax,stack mov ss,ax mov sp,20H 
+    设置ss指向stack，设置ss:sp指向stack:20，cpu执行这些指令后，就把stack段当作栈空间来用。
+    
+- cpu如何访问data段数据，就用ds指向data段，其他寄存器（[bx]）来存放偏移地址。
+- 总之，cpu如何处理我们定义段中段内容，是当做指令执行，当作数据访问，还是当作栈空间，完全是
+靠程序中具体的汇编指令，和汇编指令对CS:IP SS:SP 和DS寄存器的设置来决定的。
+
+- ![](figure/assmeble.png)
