chapter 7 more flexible memory location

--- a/docs/c-4.4汇编.md
+++ b/docs/c-4.4汇编.md
@@ -64,3 +64,16 @@ https://zhuanlan.zhihu.com/c_1235568790944612352
 靠程序中具体的汇编指令，和汇编指令对CS:IP SS:SP 和DS寄存器的设置来决定的。
 
 - ![](figure/assmeble.png)
+
+# 7. 更灵活的定位内存地址的方法
+
+- ASC码，就是一种编码方案，一套规则，数字字母等等都有一个ASC码值。
+
+- [bx+idata]来表示一个内存单元，比如可以来表示数组，inc bx就可以啦。数组在内存中是连续存储的。
+
+- si di是8086cpu中和bx功能相近的寄存器。si di不能够分成两个8位寄存器来使用。
+
+- [bx+di+idata]来更灵活的表示内存单元，用两个变量，一个常量来表示地址了。
+
+- 程序中经常要暂存的数据，但是寄存器又不够用，就需要暂存到内存中。而固定一段地址去存，
+又比较麻烦，这时就可以用栈来暂存这些数据了。
