--- a/docs/c-4.4汇编.md
+++ b/docs/c-4.4汇编.md
@@ -77,3 +77,29 @@ https://zhuanlan.zhihu.com/c_1235568790944612352
 
 - 程序中经常要暂存的数据，但是寄存器又不够用，就需要暂存到内存中。而固定一段地址去存，
 又比较麻烦，这时就可以用栈来暂存这些数据了。
+
+# 8. 数据处理的两个基本问题
+- 绝大部分机器指令都是进行数据处理的指令，处理大致可以分为3类，读书，写入，运算。在机器指令
+这一层面，并不关心数据的值是多少，而关心在指令执行的前一时刻，它将要处理的数据所在的位置。
+
+- 在汇编指令中用3个概念来表达位置：
+    - 立即数（idata）
+        - 执行前在cpu的指令缓冲器中
+        - mov ax,1
+    - 寄存器
+        - 要处理的数据在寄存器中
+        - mov ax,bx
+    - 段地址(SA)和偏移地址(EA)
+        - 指令要处理的数据在内存中
+        - mov ax,[bx+8]
+- 这样产生了很多种寻址方式
+    - 直接寻址 idata
+    - 寄存器间接寻址 [bx]
+    - 寄存器相对寻址 [bx+idata]
+    - 基址变址寻址 [bx+si]
+    - 相对基址变址寻址 [bx+si+idata]
+- 指令要处理的数据有多长？
+    - mov word ptr [bx], 2
+    - mov byte ptr ds:[0], 1
+    - 指明了是字节长还是字长 1byte or 2byte
+- 其实提供这么多寻址方式，只是方便了我们在编程的时候，为结构化数据的处理提供了方便。
