计组chapter4存储器

--- a/docs/c-4.3计算机组成原理.md
+++ b/docs/c-4.3计算机组成原理.md
@@ -1,7 +1,7 @@
 # 笔记： 
 - https://zhuanlan.zhihu.com/p/118673379
 
-# 1. 总线主要的功能和分类？
+# 1-3章. 概论，历史，总线
 - 总线的功能是解决不同设备之间的通信问题。可以分为：片内总线、系统总线，其中系统总线可以分为数据总线、地址总线、控制总线。
 
 - 地址总线？
@@ -24,22 +24,57 @@
         
 
 
-# 2. 计算机的指令一般由操作码和地址码组成，那么计算机指令可以分类为几种类型？
-移位操作指令、数据传输指令、控制指令、算术逻辑操作指令。
+- 计算机的指令一般由操作码和地址码组成，那么计算机指令可以分类为几种类型？
+    - 移位操作指令、数据传输指令、控制指令、算术逻辑操作指令。
+    - 对计算机指令数据的寻址有哪几种方式？
+        - 立即寻址、直接寻址、间接寻址。
+    - 计算机的运算器主要由什么组成？控制器呢？
 
-对计算机指令数据的寻址有哪几种方式？
-立即寻址、直接寻址、间接寻址。
+    - 控制器主要由：程序计数器、时序发生器、指令译码器、寄存器、总线组成。
 
-计算机的运算器主要由什么组成？控制器呢？
+    - 运算器主要由：数据缓冲器、ALU、寄存器、状态字寄存器、总线组成。
 
-控制器主要由：程序计数器、时序发生器、指令译码器、寄存器、总线组成。
+    - 请简述计算机指令的执行过程。
+        -指令执行过程：取指令-分析指令-执行指令
 
-运算器主要由：数据缓冲器、ALU、寄存器、状态字寄存器、总线组成。
+- 指令和数据
+    - 本地代码需要加载进内存才可以运行，内存中存储着构成本地代码的指令和数据。程序运行时，CPU从内存中将指令和数据读出来，然后放在CPU内部的寄存器中进行处理。
 
-请简述计算机指令的执行过程。
-指令执行过程：取指令-分析指令-执行指令
+# 4. 第四章 存储器
+- 存储器分类
+    - 主存
+        - 随机存储器(RAM)
+            - 静态RAM
+            - 动态RAM
+                - 电容存储信息，信息会消失，所以要不断的刷新
+        - 只读存储器(ROM)
+    - 辅存
+        - 磁盘
+        - 磁带
+        - 光盘
+    - 缓存(cache)
 
-# 3. 指令和数据
-- 本地代码需要加载进内存才可以运行，内存中存储着构成本地代码的指令和数据。程序运行时，CPU从内存中将指令和数据读出来，然后放在CPU内部的寄存器中进行处理。
+- 存储器的层次结构
+    - 寄存器
+    - 缓存
+    - 主存
+    - 磁盘
+    - 磁带
+- ![](figure/memory1.png)
+
+- 主存技术指标
+    - 存储容量
+    - 存储速度
+        - = 存取时间+存取周期
+    - 存储器带宽：单位时间存储器存取的信息量-
+- 存储芯片的基本结构
+    - ![](figure/memory2.png)
+    - 地址线单向，数据线双向
+    - 地址线和数据线共同反应了存储芯片的容量，例如地址线为10根，数据线为4根。则芯片容量为2^10*4
+
+- 半导体存储芯片基本结构
+    - ![](figure/memory3.png)
+- 随机存储器基本结构
+
 
 
