chapter 4 memory structure

--- a/docs/c-4.3计算机组成原理.md
+++ b/docs/c-4.3计算机组成原理.md
@@ -53,7 +53,11 @@
         - 磁带
         - 光盘
     - 缓存(cache)
-
+- 按存取方式分类
+    - 可分为随机访问存储器和串行访问存储器
+    - 随机访问存储器存取时间与物理地址无关，只要给出地址就能进行寻址访问，例如内存
+    - 而串行范围存储器，存取时间与物理地址有关，根据地址的不同存取时间会有所差异，需要针对物理地址位置进行一定的调整才能完成数据的读写，例如磁盘，磁带
+    
 - 存储器的层次结构
     - 寄存器
     - 缓存
@@ -61,6 +65,7 @@
     - 磁盘
     - 磁带
 - ![](figure/memory1.png)
+
 
 - 主存技术指标
     - 存储容量
@@ -74,7 +79,53 @@
 
 - 半导体存储芯片基本结构
     - ![](figure/memory3.png)
-- 随机存储器基本结构
+- 随机存储器(RAM)基本结构
+    - 静态ram
+        - ![](figure/memory4.jpg)
+    - 动态ram
+        - ![](figure/memory5.jpg)
+    - 动静态ram比较
+        - ![](figure/memory6.jpg)
+        静态ram贵容量低 一般做cache
 
+- 只读存储器(ROM)
+    - 只读存储器中通常保存系统配置，系统文件一类需要长期断电保存，不经常修改的数据
 
+- 存储器与CPU的连接
+    - 存储器容量扩展
+        - 相比CPU的地址线宽，数据线宽，无法直接使用单块存储芯片来满足
+        - 因此我们需要将多个存储芯片连接，扩展地址范围满足CPU地址线宽要求，扩展存储字长适应CPU数据线宽要求，从而构成一个存储(整)体
+        - 位扩展（增加存储字长）
+        - 字扩展（增加存储地址范围）
+        - 字位同时扩展，增加片选位
+- 存储器的校验
+    - 奇偶校验与分组
+        - 利用重叠分组，在检错的同时准确定位出错的位置
+            - 汉明码
+            - ![](figure/hanmingcode.jpg)
+
+- 主存结构调整
+    - 单体多字结构
+    - 多体并行结构
+- 高性能存储芯片 - cache
+    - ![](figure/cache.jpg)
+    - 块号 偏移地址
+    - cpu cache 主存结构
+        - ![](figure/cpucache.jpg)
+    - 对cache读操作
+        - ![](figure/cache1.jpg)
+    - 写操作要注意一致性
+    - cache-主存映射方法
+        - 直接映射
+            - ![](figure/cache2.jpg)
+        - 全相联映射
+            - ![](figure/cache3.jpg)
+        - 它俩的综合 组相联映射
+            - ![](figure/cache4.jpg)
+    - cache替换算法 fifo lru
+
+- 时间局部性
+    - 当前正在使用的指令或者数据在不久的将来还会被使用到，这些数据应该放到cache里。
+- 空间局部性
+    - 当前正在使用一个指令或数据，那么在不久的将来，相邻的指令或者数据也可能会被使用到。
 
