辅助存储器 磁盘

--- a/docs/c-4.3计算机组成原理.md
+++ b/docs/c-4.3计算机组成原理.md
@@ -123,9 +123,20 @@
         - 它俩的综合 组相联映射
             - ![](figure/cache4.jpg)
     - cache替换算法 fifo lru
+    
+    - 时间局部性
+        - 当前正在使用的指令或者数据在不久的将来还会被使用到，这些数据应该放到cache里。
+    - 空间局部性
+        - 当前正在使用一个指令或数据，那么在不久的将来，相邻的指令或者数据也可能会被使用到。
 
-- 时间局部性
-    - 当前正在使用的指令或者数据在不久的将来还会被使用到，这些数据应该放到cache里。
-- 空间局部性
-    - 当前正在使用一个指令或数据，那么在不久的将来，相邻的指令或者数据也可能会被使用到。
+- 辅助存储器
+    - 磁表面存储器
+        - 记录密度：记录密度描述磁盘表面存储二进制信息的密度，包含道密度和位密度
+        - 存储容量：描述磁盘存储二进制信息的容量
+        - 平均寻址时间：从给出地址信息到磁盘输出数据的平均时间
+            - 平均寻址时间=寻道时间+等待时间
+            - 寻道时间是针对移动磁头的磁表面存储器，磁头寻找磁道的平均时间
+            - 等待时间是磁头来到指定磁道上方后，等待相应扇区旋转定位的时间
+
+
 
