chapter5 io 中断 与 DMA

--- a/docs/c-4.3计算机组成原理.md
+++ b/docs/c-4.3计算机组成原理.md
@@ -138,5 +138,192 @@
             - 寻道时间是针对移动磁头的磁表面存储器，磁头寻找磁道的平均时间
             - 等待时间是磁头来到指定磁道上方后，等待相应扇区旋转定位的时间
 
+# 第五章 输入输出系统（IO）
+- I/O设备是能够被接入到计算机上运行的一切外部设备的总称
+- 5.1 概述
+    - I/O设备与主机的联系方式
+        - CPU对I/O设备的访问指令包括操作码、指令码、设备码
+        - 操作码是一个标志，用于标识指令针对I/O设备进行控制
+        - 指令码指出了需要进行何种控制操作
+        - 设备码给出了I/O设备的编码、地址，或I/O设备中某个寄存器(端口)的地址
+    - 编址方式
+        - CPU需要访问I/O设备时，需要在设备码部分给出I/O设备的地址，这就涉及到了I/O设备的编址方式
+        - 统一编址是将CPU地址总线宽度的一部分直接作为I/O设备的地址
+        - 不统一编址/单独编址，对I/O设备的编址与内存地址不连读，独立于内存地址之外
+    - 设备选址
+        - 在CPU运行指令时，需要对指令地址进行解码，并通过设备选择电路，选中相应的设备进行工作
+    - 传送方式
+        - 串行和并行
+    - 联络方式
+        - CPU与I/O接口通常都是异步并行的，这里的联络方式针对I/O接口与I/O设备
+        - 立即响应方式
+        - 异步工作方式： 主要分串行和并行
+        
+    - I/O设备与主机的连接方式
+        - 通过统一的I/O接口接入到计算机总线中进行连接，有利于工业化的生产，便于增删设备，用户自由扩展
+    
+    - I/O设备与主机信息传送的控制方式
+        - 程序查询方式
+            - ![](figure/io1.jpg)
+            - cpu需原地踏步等待
+        - 程序中断方式
+            - ![](figure/io2.jpg)
+            - ![](figure/io3.jpg)
+            - ![](figure/io4.jpg)
+            - 与程序查询方式相比，程序中断方式没有CPU原地踏步等待的现象，一定程度上提高了效率
+            - 但程序中断方式需要CPU记录相关的程序断点信息，才能完成中断跳转和转回，一次小数据量的读取，需要大量的指令处理中断操作
+            - CPU在程序中断方式中，仍需要作为处理器，对I/O设备传输的数据进行处理（一拖二），并没有被真正的解放
 
+        - DMA方式
+            - DMA方式通过DMA处理器来完成对I/O设备传输数据的处理，实现了I/O设备与主存之间的直接联系，从而将CPU真正解放出来
+            - ![](figure/io5.jpg)
+            - 当程序运行过程中出现I/O操作时，CPU向DMA控制器发送启动I/O的信号并继续执行其它工作
+            - I/O设备在DMA控制器的控制下完成准备工作，随后DMA控制器向CPU发送DMA请求
 
+            - CPU接到请求后，会让出一个或数个存取周期，系统总线的占用权限（周期挪用），在此期间CPU不能使用系统总线，不能访问内存
+
+            - DMA控制器在挪用的存取周期内，通过系统总线，控制I/O设备与主存完成信息交换
+
+            - 对于现代的CPU，即使让出了数个周期的系统总线权限，无法访问内存，仍能通过预取的指令和数据进行相应的工作（CPU工作可能不受影响）
+            - 对比三种方式
+            - ![](figure/io6.jpg)
+
+    
+- 5.2 IO设备
+    - ![](figure/io7.jpg)
+
+- 5.3 IO接口
+    - I/O接口应具有以下功能：
+
+        - 1.选址/设备选择功能，需要通过设备选择电路，对主机设备选择线上传递的I/O设备码/端口码进行判断匹配，控制I/O设备的启用与否
+
+        - 2.命令传送功能，需要命令寄存器、译码器，将主机命令线路发来的控制命令转换并向外部I/O设备的控制器传递命令
+
+        - 3.数据传输功能，需要数据缓冲寄存器，通过数据缓冲实现I/O设备与主机之间的传输速度匹配，主机与I/O之间通常使用并行传输，而I/O接口与设备之间通常使用串行传输，因此还需要实现 串 - 并 格式转换
+
+        - 4.反应设备的状态，需要各种触发器来记录和反应外部I/O设备的工作状态，主机通过I/O接口获取外部I/O设备的工作状态
+
+        - ![](figure/io8.jpg)
+        - io设备与总线的连接电路
+        - ![](figure/io9.jpg)
+- 5.4 程序查询方式
+    - 传输程序流程
+        - 由于CPU寄存器容量有限，每单次传输后CPU需要将寄存器中的内容写入到主存中，再进行下一次传输
+        - 传输中我们需要设定一个计数器来记录传输的数据量，每单次I/O设备-CPU寄存器-主存数据传输后累加计数器，通过计数器的数值辨别是否已经完成全部的数据传输任务
+        - ![](figure/io10.jpg)
+    - 接口电路
+        - ![](figure/io11.jpg)
+    - 以从I/O设备中读取数据的输入操作为例，电路流程如下：
+
+        - 1.地址线/设备选择线路 上给出I/O设备的地址码/设备码，由I/O接口中的设备选择电路完成比对，输出选择信号并与启动信号过与门。选择设备并获得CPU启动指令的I/O接口，将完成状态触发器D置0，工作状态触发器B置1
+
+        - 2.I/O设备控制器获得工作命令，响应工作状态/设备忙状态，开始准备数据
+
+        - 3.I/O设备准备好数据并传输到DBR数据缓存中，设备通过状态线向接口反馈工作结束信号
+
+        - 4.I/O接口获得设备工作结束信号后，完成状态触发器D置1，工作状态触发器B置0
+
+        - 5.CPU循环查询到完成状态触发器D置1，寻找时机开启数据交换
+
+        - 6.CPU通过数据总线从DBR中读取数据
+        
+- 5.5 程序中断方式
+    - 中断的概念
+        - 中断是一个广义的概念，是指CPU在运行程序的过程中，出现了某些特殊事件
+        
+        - CPU需要对当前程序运行的断点进行记录，并跳转执行中断服务程序
+        - 在程序中断控制方式中，CPU需要作为I/O设备向主机传递数据的处理器，所运行的中断服务程序便针对于此
+        - 当中断服务程序执行完成后，CPU会根据之前记录的程序断点，返回到原来执行的程序断点，继续向下运行原有程序
+    - 中断流程
+        - ![](figure/io12.jpg)
+    - 中断接口电路
+        - ![](figure/io13.jpg)
+        - ![](figure/io14.jpg)
+
+    - 中断向量地址形成部件
+        - 中断向量包含了中断服务程序的段地址，偏移地址，从而指向内存中的某一条指令（该指令是中断服务程序的首指令，或跳转到中断服务程序的指令），也包含了执行中断服务程序时的一些状态信息（参数）
+    
+    - io中断处理过程
+        - ![](figure/io15.jpg)
+        - 如图以读取操作为例，I/O中断处理过程
+        
+        - 对于I/O接口通过设备选择线&CPU启动命令，设置状态触发器，I/O设备准备数据，传输到DBR缓存，之后进行中断请求的过程就不再赘述了
+        - CPU发送中断查询信号后会将所有I/O接口中的INTR输出信号初始化(置1)，设备向触发器设置中断请求信号，之后使用排队器进行排队，向CPU发送被选中的中断请求信号
+        - CPU发送响应中断请求信号INTA给设备编码器，之后获取编码器输出的向量地址
+    - 中断服务程序流程
+        - 首先CPU需要保护现场，对中断返回之后需要执行的下一条指令位置进行保存（程序断点），此外还要保存程序的运行状态（不能由之后的指令复现的对当前程序执行有用的状态信息），这两步保存操作完成由硬件自动完成，称之为中断隐指令(操作)
+        - 如果在中断程序的运行中，需要占用体系结构寄存器，也需要先保存寄存器中的内容，以便程序返回后复现，可以通过压栈的方式存储，也可以写入到内存的某一位置，或是转存入其它寄存器中，这需要编写编写中断服务程序的程序员自行维护
+        
+        - CPU切入运行中断服务程序，中断服务程序针对不同的I/O设备编写，具有特定的功能
+        - 完成中断服务程序后，CPU需要恢复现场，主要针对体系结构寄存器，通过 出栈/读取内存/读取寄存器 的方式复现原有的数据
+        - CPU使用中断返回指令，根据程序断点定位下一条需要执行的程序指令位置，并继续运行原有程序
+    
+    - 单中断多中断对比
+        - ![](figure/io16.jpg)
+        - 单中断中，只有CPU完成中断服务程序，返回原程序后，才会执行开中断指令，响应其它中断请求
+        - 而多中断中，则是提前开中断指令到进入中断服务程序后，在运行中断服务程序时允许更高级别的中断再次插入
+        - 程序的断点，体系寄存器的值通过压栈保存，从而借助栈“先进先出”的特性，能够在中断的多重嵌套中，正确的获取当前层的返回信息
+    - 主程序与中断服务程序抢占cpu流程图
+            - ![](figure/io17.jpg)
+            - 宏观上CPU和I/O并行工作，体现在I/O设备进行准备时，CPU能并行执行主程序的运行
+            - 但本质上，当I/O设备与主机真正开始数据交换时，CPU仍需要中断现行程序，运行中断服务程序，作为处理器对I/O设备与主机的数据交换进行服务，并没有被真正的解放
+            
+- 5.6 DMA方式
+    - ![](figure/io18.jpg)
+    - DMA与主存交换数据的三种方式
+        - 停止CPU访问主存
+        - 周期挪用（周期窃取）
+        - DMA与CPU交替访问
+    - DMA接口的功能与组成
+        - DMA接口所具有的功能如下：
+        
+        - 1.向CPU提出总线占用申请
+        - 2.处理总线控制权的转交
+        - 3.获得控制权后，管理系统总线，控制数据传输
+        - 4.确定传输的首地址和长度，记录传输的字长并累加传输地址，保证传输的有序完成
+        - 5.传输结束时，给出操作完成信号移交总线控制权
+    - DMA接口电路
+        - ![](figure/io19.jpg)
+        - AR存储器中存储传输的目标地址，假设按从小到大的地址顺序，每进行一字长的传输就需要对AR存储器中的地址+1
+        - WC存储器中保存传输的字长度，通常根据传输数据量先置为负数，并不断累加，直到0即为传输完成
+        - BR存储器中缓存外部设备需要传输的数据
+        - DAR存储器中保存DMA接口自身的地址，用于设备选择时进行比对，此外DAR存储器中还需要保存外部存储设备的相关地址参数，例如连接外部磁盘时保存磁道号，扇区号
+        - AR通过地址线将需要访问的主存地址传输给主存
+        - 数据线连接AR WC BR DAR存储器实现数据的输入输出
+        - DMA控制逻辑需要接收来自外部设备请求传输的DREQ信号，向设备反馈相应信号DACK，向CPU发出总线占用请求HRQ信号，接收CPU的相应信号HLDA
+        - 中断机构在传输过程中，接收来自WC的溢出信号（传输完成），向CPU发出传输中断请求，交还总线占用权，并进行传输后处理
+    
+    - DMA工作过程
+        - DMA传输过程可分为三个阶段：预处理阶段、数据传送阶段、后处理阶段
+        - ![](figure/io20.jpg)
+        - 如图预处理阶段由CPU启动I/O设备时，运行相应的指令完成，包括对DMA控制逻辑设置传送方向，对DAR设置设备地址，AR设置主存地址，WC设置传送字数
+        - 数据传输过程由DMA控制I/O设备，在挪用的访存周期内完成，期间CPU可继续执行主程序
+        - 当数据全部传输完成，DMA接口会发送中断请求，由CPU运行中断服务程序进行后处理
+
+        - 数据传送的过程中，是一个从外部设备不断缓入数据到BR缓存器，再写入主存，或是从主存中不断读出数据到BR再写入外部设备的过程
+        - 每次的周期挪用，完成数据传输后，需要根据WC存储器判断是否传输完成，若传输未完成，则需要再次从外设缓入数据到BR准备下一次传输，或从主存中读出数据到BR进行下一次写入，若传输完成则向CPU发送中断请求信号
+    - DMA传输流程图
+        - 数据从外部设备写入主存
+            - ![](figure/io21.jpg)
+            - 1.CPU进行预处理，启动传输后，外部设备将一定批量的数据缓入BR存储器中
+            - 2.达到BR存储器容量上限，或已缓入所有数据，外部设备向DMA控制发出DREQ信号表示准备工作完成，请求传输
+            - 3.DMA控制逻辑通过总线向CPU发出HRQ信号申请总线占用申请
+            - 4.CPU响应申请，发出HLDA应答信号
+            - 5.AR存储器通过地址总线将传输目标地址置入主存，主存准备好写入
+            - 6.DMA控制逻辑向设备发出DACK信号，表示开始进行传输
+            - 7.通过数据线将BR中缓入的数据写入主存，并在写入完成后对AR地址和WC传输字长+1
+            - 8.单次传输已完成，根据WC存储器累加后值判断传输是否完成，若未完成，设备会再次缓入数据到BR中，并再次申请总线占用，传输数据，若完成，中断机构向CPU发出中断请求，CPU运行中断服务程序进行后处理
+        - 数据从主存写入外部设备
+            - 1.BR存储器将缓存的全部数据传输给外部设备，完成写入
+            - 2.BR存储器全部设备写入完成后，设备向DMA控制逻辑发出DREQ信号，表示传输完成
+            - 3.DMA控制逻辑通过总线向CPU发出HRQ信号申请总线占用申请
+            - 4.CPU响应申请，发出HLDA应答信号
+            - 5.AR存储器通过地址总线将传输目标地址置入主存，主存准备好读出
+            - 6.DMA控制逻辑向设备发出DACK信号，表示开始进行主存数据读出
+            - 7.通过数据线将主存中的数据读出到BR存储器中，并对AR和WC+1
+            - 8.单次写入完成，根据WC判断是否已完成写入，是否需要继续循环，或是发出中断请求
+            WC存储器是在主存-BR进行数据传输完成后才会+1，之后根据其值判断是否完成数据传输，因此对于主存写入外部设备，最后一次主存-BR似乎读出了多余的不必要数据
+            
+        - 中断与DMA方式比较
+            - ![](figure/io23.jpg)
+            - 存取周期是两次独立的读/写操作，从第一次开始到第二次开始，之间的最小时间间隔，也分为读周期/写周期
