计算机运算方法

--- a/docs/c-4.3计算机组成原理.md
+++ b/docs/c-4.3计算机组成原理.md
@@ -327,3 +327,105 @@
         - 中断与DMA方式比较
             - ![](figure/io23.jpg)
             - 存取周期是两次独立的读/写操作，从第一次开始到第二次开始，之间的最小时间间隔，也分为读周期/写周期
+
+# 第六章 计算机的运算方法
+- CPU的一大功能就是完成算术逻辑运算，为此我们需要将一些最基本的数据形式通过硬件表示，让CPU直接识别，并通过硬件组织实现一些最基本的逻辑运算处理
+- 在程序的编写中，我们使用的 int float 一类的基础值类型数据就是直接实现在硬件上的数据形式，+/- 运算也是直接对应硬件实现来完成
+- 程序中所有复杂的运算处理，都是通过组合硬件实现的基本运算来完成的，为此就需要我们编写机器语代码 汇编代码 上层语言代码来完成
+
+- 6.1 数字表示
+    - 无负号数的表示
+        - 无符号数即没有正负的数/不需要符号位的数/恒正的数
+        - 只需要将数字转换为二进制填入到内存/寄存器中即可
+        - 内存/寄存器的长度，将直接影响/反应无符号数的范围，例如保存在8bit长度寄存器中的无符号数范围是0~255（对应8bit二进制的所有状态）
+    
+    - 有符号数
+        - 有符号数需要1bit二进制作为符号位来记录正负号，0为正1为符，其它二进制位作为数字位（同无符号数）
+        - 对于有符号数的保存，就需要提出真值和机器数的概念
+        - 真值是数据在参与实际运算时所表现的数值，而机器数是一串二进制码
+        - 例如8bit二进制：保存真值+5就对应机器数0,0000101
+    
+    - 小数点的位置约定（定点表示）
+        - ![](figure/c6-1.jpg)
+        - 计算机中，对于小数点的位置并没有硬件实现的位置记录，而是通过不同的数据类型约定默认位置的方式，这种方式称之为定点表示
+        - 对于小数类型，小数点认为在符号位之后，数据位的最前端，定点表示下，小数均是纯小数
+        - 对于整数类型，小数点认为在数据位末端（没有保存小数点后的数据），全部数据位二进制对应转换为一个整数
+        
+    - 源码表示法
+        - 源码表示法即对于数据，保存其直接转为二进制的数据作为数据位，再使用1bit二进制做符号位，从而构成机器数
+        - 以寄存器长度5bit的有符号整形源码表示法为例：
+            - 对于整形+14
+            - 符号位为0（正）
+            - 数字14转为二进制对应1110
+            - 因此其源码表示法就保存机器数为 0,1110
+        - 小数的源码表示
+            - 十进制小数转二进制可以通过不断乘2，取越位的方法实现
+                - 例如0.8125转二进制小数
+    
+                - 0.8125*2=1.625 第一位取1
+                
+                - 0.625*2=1.25 第二位取1
+                
+                - 0.25*2=0.5 第三位取0
+                
+                - 0.5*2=1 第四位取1
+                
+                - 最终结果就是0.1101
+                - 由于我们其实只能用 2^（-n）去将小数拼出来/或是拼出接近值，因此定点机中小数的表示受位数的限制，在表示范围内是离散的而不是连续的
+
+            - 对于一个浮点数(整数部分+纯小数部分)，其直接转为二进制，就是将整数部分按照一般的整数-->二进制转换，再将纯小数部分转为二进制小数，连接起来中间加上小数点
+            
+                - 例如 14.8125 直接转为二进制
+                
+                - 整数部分14转为二进制为1110
+                - 纯小数部分0.8125转为二进制0.1101
+                - 因此14.8125转为二进制结果就是1110.1101
+            - 源码表示的特点是简单直观，但在运算时存在下面的问题
+                - ![](figure/c6-2.jpg)
+            - 那么有没有一种方法能够统一加法运算呢？
+
+    -  补码表示法
+        - 模是计量系统的计数范围上限+1，是计算器恰好产生“溢出”的量值,任何存储/处理范围有限的计数系统都具有模量
+        - 例如:
+            - 时钟的计量范围是 0~11 模量就是12，记为mod=12
+            - 在n位字长下，积累范围就是 0~2^n-1 模量就是2^n
+        - 补数
+            - 以时钟为例，计量范围0~11 mod=12
+                - 如果我们要将时间回拨3h，也就是-3的操作，其效果与将时间后拨9h，也就是+9的操作相同
+                - 9就是-3在mod=12下的补数
+            - 将负数不断累加n次模量，最终得到的在计数范围内的正数，就是负数在当前模量下的补数
+            - 在计算中由于超过模量就要取模映射回范围，因此累加负数的效果就与累加其补数的效果相同
+            
+            - 例如 4-3=1 同 4+9=13=1
+            - 从而借助补数我们就将减法，转换为加法
+                - 以4位二进制 mod=16为例
+                - 则-1011可以用+0101代替记作
+            
+            - 而对于正数而言，补数即为其原码本身
+            - 可以理解为引入补数就是为了将负-->正/减-->加，而正数本身就是累加操作
+        - 知道了计算补数的方法，但对于0101，需要增添一个符号位来区分它究竟是-1011的补数，
+        还是+0101本身   
+            - 这里我们可以将符号位和数据位看作一体，即4bit数据字长在加上符号位后变为5bit，转而将模量设为2^5=100000来计算补数
+                - ![](figure/c6-3.png)
+            - 补码表示就是将数据，以n=数据字长+1，2^n为模量计算得到的有符号补数（符号位+数据位）作为机器数记录
+
+        - 纯小数的补码
+            - 对于范围在[-1,1]之间的纯小数
+            - 我们使用小数点后4bit数据位+1bit符号位
+            - 对于正纯小数 +0.1110 其补码相当于它本身的原码 0.1110
+            - 而对于负纯小数，由于范围是[-1,1]因此mod=2 可以通过10.0000来计算
+                - 真值：-0.1100
+                - -0.1100+10.0000=1.0100 即为补码
+                - (数值10.0000减去数值0.1100得到补码)
+        - 求补码的快速方法
+            - 对于正数来说，无论是正整形还是正纯小数，其补码都是其原码
+
+
+
+
+
+
+
+    
+
+            
