快速求补码

--- a/docs/c-4.3计算机组成原理.md
+++ b/docs/c-4.3计算机组成原理.md
@@ -419,8 +419,17 @@
                 - (数值10.0000减去数值0.1100得到补码)
         - 求补码的快速方法
             - 对于正数来说，无论是正整形还是正纯小数，其补码都是其原码
+            - 而对于负数来说，我们对负数值，需要加对应模，从而得到负数的有符号补数（补码）
+            - 对于 -1010 补码计算： -1010+100000=11111+1-1010=1,0101+1=1,0110对于 -1010 补码计算： -1010+100000=11111+1-1010=1,0101+1=1,0110
+            - 我们发现对于中间结果10101，恰好是-1010的原码表示 1,1010 的符号位不变，数据位各位取反（与11111相减相当于各位取反）
+            - 那么对于负数的补码，快速计算的方法即为：写出其原码，符号位不变，数值位各位取反再+1
+            - 同样的对于一个负数的补码，我们将数值位先-1再各位取反（相当于先各位取反再+1），所得的结果就对应其真值(原码)
+            - 补码1,0110 数值位各位取反再+1 结果 1,1010 即真值 -1010 的原码
 
-
+        - -0的补码
+            - 4bit数据位+1bit符号位下
+            - 对于+0即0,0000它的补码是它本身 0,0000+100000=0,0000（10,0000高位溢出）
+            - 而对于-0即1,0000，有趣的是它的补码也是它本身 1,0000+100000=1,0000 (11,0000高位溢出)
 
 
 
