补码与移位

--- a/docs/c-4.3计算机组成原理.md
+++ b/docs/c-4.3计算机组成原理.md
@@ -431,6 +431,103 @@
             - 对于+0即0,0000它的补码是它本身 0,0000+100000=0,0000（10,0000高位溢出）
             - 而对于-0即1,0000，有趣的是它的补码也是它本身 1,0000+100000=1,0000 (11,0000高位溢出)
 
+        -  已知x求-x的补码
+            - 只需对x的补码连同符号位，各位取反，再加1即可
+
+    - 反码表示
+        - 正数的反码与原码一致，负数的反码是符号位不变数据位各位取反
+        - “反”就是各位取反（但只针对负数）
+        - 对于负数而言，反码可看作原码和补码转换的中间过渡，原码的反码+1就是补码，补码的反码+1就是原码
+        - 例如
+            - 真值+13
+            - 原码与反码相同:0,1101
+            - 真值-13
+            - 原码:1,1101
+            - 反码:1,0010
+        - 对于纯小数，反码的表示和转换规则与整形一样
+        - 例如
+            - 真值+0.8125
+            - 原码与反码相同:0.1101
+            - 真值-0.625
+            - 原码:1.1010
+            - 反码:1.0101
+        - 已知反码求原码，注意符号位，如果为正反码与原码相同，若为负数据位各位取反即是原码
+
+    - 原码 补码 反码 总结
+        - 对于正数而言，原码=补码=反码
+        - 对于负数
+            - 符号位均为1
+            - 数值部分：原码等于其绝对值，反码是原码各位取反，补码是反码+1
+        - 对于0
+            - ±0 的原码和反码不同，但补码相同
+        - 8bit二进制下，真值、原码、补码、反码 表示数据的范围如下表
+            - ![](figure/c6-5.jpg)
+            - 计算机中规定，对于有符号整形数据，机器数均采用补码存储，加减法采用补码统一运算
+
+    - 移码
+        - 之所以要引入移码，是由于用补码判断真值大小逻辑复杂
+        
+            - 这里回看一下上面8bit下补码和真值的对应表，我们来理一下用补码判断真值大小的逻辑：
+            
+            - 如果两数同为正，则二进制补码大的一方的真值大
+            
+            - 如果两束同为负，则二进制补码大的一方真值大
+            
+            - 但在一正一负比较时，无论时我们连同符号位一起看，还是只看数据位，都是二进制补码小的一方（为正）真值大，逻辑无法统一
+            
+            - 因此不得不在最开始加入一个对符号位的判断逻辑，这使得电路实现比较复杂
+        - 移码的定义与特点
+            - 如果数据位有 n bit，那么移码就是真值加上2^n对应的 n+1 bit 长度的二进制码
+                - 如图5bit数据位下，移码有6bit
+                - ![](figure/c6-6.jpg)
+                - nbit位长度，n-1bit有符号数据，如果采用其移码判断大小，则无论正负，均是二进制数据大的一方真值大（逻辑统一）
+                - 从而数学计算中的0（真值0），补码中的0，和移码中的0，都是统一的，只有唯一的0，原码和反码中，存在±0的不同问题
+
+    - 浮点数的表示
+        - 定点数与浮点数
+            - 早期计算机在硬件上仅实现了定点数，如果需要存储浮点数，就需要程序员在软件层面实现
+            - 一般的做法是通过移动小数点的位置，从而将数据部分一分为二，一部分作为整数的部分，一部分作为小数的部分
+            - 但事实上这种做法不仅实现困难，也难以统一标准，并且直接转为二进制计数，小数点前后可能保存过多无用的0，数据存储单元的利用率并不高
+
+        - 浮点采用n进制科学计数法，一般形似可作为
+            - ![](figure/c6-7.png)
+            - S尾数 j阶码 r基值
+            - 基值取2、4、8、16等（一般为2）
+            - ![](figure/c6-8.png)
+            - 联系上面的公式，将尾数/阶码/基值依次保存在内存中，就构成了浮点数的机器数
+
+        - 浮点表示范围
+            - 一个基值为2 尾数1bit符号+n位 阶码1bit符号+m位
+            - ![](figure/c6-9.jpg)
+            - 使用二进制科学计数法，因而在范围内，数据是离散的，我们是在使用范围内有限的数据表示无限多的实数（存在近似处理）
+
+            - 尾数的长度将决定离散的精度，如果数据位数过多，值过于精细，在末尾就会发生丢失，计算机会取近似处理，保留有限的数据位数
+            
+            - 二进制科学计数法本身的离散问题，以及尾数长度的有限，导致了计算机浮点运算的不精确
+            - 阶码长度则决定了范围的大小，上溢即所需阶码>最大阶码时将按计算出错处理，下溢即所需阶码<最小阶码则按机器零处理
+
+        - 浮点数的规格化表示
+            - 通常我们会采用规格化形式，禁止尾数存0扩充阶位，保证浮点数的精确性
+
+- 6.2 数字运算
+    - 定点运算
+        - 定点运算是针对于定点数（整型）进行的运算，主要包括位移，加减，乘除
+        - 移位运算
+            - 以+26为例
+            - ![](figure/c6-10.jpg)
+            - 以-26为例，移位操作补码
+            - ![](figure/c6-11.jpg)
+
+
+
+
+
+
+
+
+
+
+
 
 
 
