--- a/docs/c-4.3计算机组成原理.md
+++ b/docs/c-4.3计算机组成原理.md
@@ -517,6 +517,90 @@
             - ![](figure/c6-10.jpg)
             - 以-26为例，移位操作补码
             - ![](figure/c6-11.jpg)
+        - 算术移位和逻辑移位
+            - 算术移位对应有符号数的移位
+            - 逻辑移位则对应无符号数的移位
+        - 加减运算
+            - 当求加法时，只需写出AB的补码，并连同符号位一起累加，溢出在符号位后，就能得到A+B的补码即结果
+            - 当求A-B时，只需通过B计算出-B的补码（6.1.5.7），再视为A+(-B)的情况即可
+            - 定点加法运算中，整形，纯小数，均适用以上规则，计算时应注意存储字长的统一
+        - 溢出判断
+            - 对数据位最高有效位的进位和符号位相加后的进位做异或操作
+                - 对于正+正，符号位0+0=0进位为0，不溢出则保持符号位为0，数据位最高位不产生进位也是0（异或结果为0），若数据位产生进位1（异或结果为1）则发生了溢出
+                - 对于负+负，符号位1+1=0进位为1，为保持符号位为1，必然要接收数据位的进位1（异或结果为1），若溢出则数据位不产生进位，进位为0（异或结果为1）
+
+            - 另一种方法是多位符号位
+
+                - 之前的1bit符号位是通过整形以2的n+1次方为模，纯小数以2为模进行计算
+                
+                - 在使用k位符号位时，对应整形以2的n+k次方为模，纯小数以2k为模
+                - 此时为正，符号位全是0，为负符号位全是1
+                
+                - 加减时，若未溢出，所有符号位应全部为1或是0
+                
+                - 当符号位数值有不同时（通过异或判断），必然是数据位产生溢出的影响，此时最高位的符号位代表其真正的符号
+
+        - 乘法运算
+            - 移位相加
+            - 各位积通过移位相加，从B的末尾开始，每次相加前对累计结果右移1位，之后相加当前产生的位积
+            - ![](figure/c6-12.jpg)
+        - 除法运算
+            - ![](figure/c6-13.jpg)
+            - 每位递推时，笔算写法在被除数/余数后补0，其实对应除数右移一位
+
+            - 式商1/0比较除数右移后与被除数/余数的大小即可
+            
+            - 能商1时需要用当前余数低位补0减去右移后的除数
+            
+            - 上商的位置不断向后递推
+            
+            - s在除法笔算的过程中，除数不断的被右移，所得余数的位数也在不断增长
+            
+            一般情况下除法操作无法除尽，因而需要设置运算的位数上限
+            - ![](figure/c6-14.jpg)
+            - ![](figure/c6-15.jpg)
+
+        - 浮点运算
+            - 让我们回想一下浮点数的组成，基值+阶码+符号+尾数
+            - 对阶
+                - 对阶会采用增加阶码，尾数右移，即小阶位向大阶位对齐的方式进行
+            - 规格化
+                - 计算完成后，我们会在补码的形式下进行规格化（与之前讲到的原码规格化不同），完成规格化后再转为原码保存
+                - 补码的规格化判断中，符号位和尾数高位若相同，则未进行规格化
+            - 左归
+                - 若发现符号位和尾数位高位相同，且不等于-0.5，就需要进行左归，尾数左移1位阶码减1，直到数符和第一位数不同位置
+                - ![](figure/c6-16.jpg)
+
+            - 右规
+                - 在左归之前，我们应先判断右规的情况，右规是发现两位符号位不同时（尾数计算溢出），此时固定右规1位，阶码+1，高符号位自复制填补即可
+
+- 6.3 算术逻辑单元
+    - 算术逻辑单元即ALU电路，也就是计算机中的运算器，之前介绍的硬件实现定点/浮点的加减乘除运算功能，都被继承在这个电路中实现。ALU再与控制器继承在一起，便构成了CPU
+
+    - ALU电路
+        - ![](figure/alu.jpg)
+        - ALU的特点是一个组合逻辑电路，在Ai和Bi输入端有信号下，由Ki控制进行的运算逻辑，并产生Fi输出结果
+        - 如果输入端信号消失，那么输出端信号也会消失（不具有记忆功能）
+
+    - 进位链设计与优化
+        - 全加器的外特性如图
+            - ![](figure/c6-17.jpg)
+            - 为了产生每一位的结果，除了当前位上的输入外，我们还需获得前一位的进位数Ci-1
+            - ![](figure/c6-18.jpg)
+            - 串行进位链
+            - 并行进位链（先行进位/跳跃进位）
+                - 思路是不要将上一位完全做成一个结果，而是把构成上一位的数据直接传递给下一位
+                - 对比串行和并行，串行进位逻辑/电路实现简单但速度慢，n位会逐渐累计延迟，并行进位逻辑/电路复杂，但速度快，能同时产生进位
+            - 单重分组跳跃进位链
+                - 结合串行和并行进位，我们将n位全加器的进位链分层若干小组，组内并行链接同时产生进位，组间串行链接进位
+            - 双重分组跳跃进位链
+                - 双重分组可以看作是单重分组的二重嵌套
+                - 先将n位全加器分为若干大组，大组内分为若干小组，每小组中是基础的n位进位链
+                - 小组内采用并行链接（同单重分组），大组内各小组也采用并行链接，大组之间采用串行链接
+
+
+
+
 
 
 
