--- a/docs/c-4.3计算机组成原理.md
+++ b/docs/c-4.3计算机组成原理.md
@@ -598,9 +598,76 @@
                 - 先将n位全加器分为若干大组，大组内分为若干小组，每小组中是基础的n位进位链
                 - 小组内采用并行链接（同单重分组），大组内各小组也采用并行链接，大组之间采用串行链接
 
+# 第七章 指令系统
+- 在1-5章中我们介绍了计算机内部的大致组组成，第6章中我们开始深入CPU内部，介绍了计算机中的数字表示，ALU如何实现各类运算，以及进位链的设计和优化
+- ![](figure/c7-1.jpg)
+- 接下来我们将进一步了解CPU内部的组成，终点介绍计算机的指令系统，包括指令规范，控制器CU的设计/工作原理，如何解码运行指令，如何设计指令的排队与中断
+- ![](figure/c7-2.jpg)
 
+- 7.1 机器指令
+    - 机器指令是计算机软件的最底层，是完全面向硬件的，能够被计算机硬件（CPU）直接识别和执行的指令
+    - 机器指令完由0/1代码构成，并且不同的硬件都有自己的一套指令代码（指令集），指令集直接公开/对应了硬件所实现的各类功能，包括各种逻辑/算术运算，内存的读写
+    - 当然机器指令作为沟通计算机硬件和软件的中介，计算机系统/体系结构中对此有更为详细的介绍，这里计组课程中，我们主要学习机器指令的格式特点，以联系机器指令如何被CPU识别和解码执行
 
+    - 7.11 指令格式
+        - 指令一般可分为操作码和地址码
+        - 操作码
+            - 其中操作码不止要指出需要执行的操作，还需要指出操作对象的类型，对于不同对象的同一操作会运行不同的逻辑（怎么做）
+            - 例如IBM360中的操作码，一条加法指令还可细分为定点加法，浮点加法，此外一些机器中的操作码还指出了操作数的寻址方式
+            - 可分为固定长度操作码和可变长度操作码
+            - 扩展操作码
+                - 通常有保留码点作为扩展标值，或是使用某一位作为扩展标值
+                - 如果指令长度不变，那么我们在扩展操作码长度的同时，地址码长度就需要减少
+                - 对于保留码点作为扩展标志的扩展技术，以16bit指令长度4段为例
+                
+                - 基础操作码占用1段4bit，地址码占3段12bit，如果不进行扩展那么，指令就只有16种，且都是4位操作码12位地址码的指令
+                - 这里我们可以保留4位全1的码点作为扩展标记，当第一段出现全1时，代表进行了扩展，同样的如果第二段也出现了全1，即再次扩展，以此类推
+                - 如图我们进行了三次扩展，均以全1作为扩展标记
+                - ![](figure/c7-3.jpg)
+                - 当然我们也可以不止用全1作为标记，例如除了全1，1110也可是扩展标记（保留码点）
+                - 对计算机硬件操作进行指令编码时，通常频繁出现的指令会使用短指令，而出现频率较低的指令会使用长指令
+        - 地址码
+            - 四地址
+                - ![](figure/c7-4.jpg)
+                - 四地址是最长的地址码形式，如图共有4段
+                - A1是第一操作数地址
+                - A2是第二操作数地址
+                - A3是结果需要保存的地址
+                - A4是下一条指令的地址地址
+                - 该指令执行后会进行4次访存，取出A1和A2执行OP操作，将结果存入A3，并读取下一条指令A4
+                - 四地址的寻址范围非常有限，设指令字长32位，操作码8位，那么每条地址长6位，只能进行2^6=64范围的寻址，因此四地址指令并不常见
+            - 三地址
+                - ![](figure/c7-5.jpg)
+                - 我们可以用程序计数器（Program Counter,PC）来代替A4，每取出一条指令后，PC都会自加1从而指向下一条指令的地址，由此就构成了三地址指令
+                - 三地址仍需要4次访存，地址码位长度略有增加，假设同前，地址码长8位，三地址寻址范围为2^8=256
+            - 两地址
+                - ![](figure/c7-6.jpg)
+                - 我们可以将计算的结果覆盖存入到A1或A2（其中一个操作数）中，从而就不需要A3，形成两地址指令
+                - 两地址指令仍需要4次访存，假设同前，地址码长12位，寻址范围来到了2^12=4K
+                - 我们也可以将运算结果保存到ACC中，从而访存次数变为3次
+                - 当然还有一种情况是其中一个操作数在ACC中，A1是另一个操作数，A2是保存位置，这样访存次数也是3次
+            - 一地址
+                - ![](figure/c7-7.jpg)
+                - 如果其中一个操作数已经存入了ACC中，只需要取另一个操作数A1，保存位置也是ACC，那么就构成了1地址指令
+                - 1地址指令需要两次访存，假设同前，地址码长24位，寻址范围来到2^24=16M
+                - 多数常见的计算机指令都是围绕ACC进行的一地址指令，不妨回想一下之前加法/减法的指令实现
 
+            - 零地址
+                - 即只有操作码的指令
+                - 事实上这样的指令有不少，例如围绕ACC进行取反/左移/右移/判断
+                - 对于堆栈型设备，围绕堆栈的指令也可以是零地址的，例如取栈顶两数加和结果入栈
+
+    - 7.12 指令字长
+        - 指令字长取决于三方面的因素
+            - ![](figure/c7-8.jpg)
+            - 操作码和地址码所需的长度无疑会影响指令字长，而对于可变长度指令来说，操作数的个数亦会影响其长度
+    - 7.13 总结指令格式
+        - 首先对于一些围绕硬件资源进行的指令操作，操作数/保存位置 可以通过隐含的形式给出
+        - 从而在指令长度固定的情况下，可以将更多位长分配给单段地址码，从而扩大指令的寻址范围
+        - 不固定指令长度下，这种做法亦可以直接减少指令字长，对于零地址指令可以只有8位操作码
+        - 对于围绕寄存器进行的指令，也能直接减少访存次数
+        - 如果指令的操作数，保存位置，下一条指令都位于寄存器中，那么执行指令的过程中甚至可以做到不访存
+        - 当指令的地址指向寄存器时，由于计算机寄存器数量/容量均有限，只需要很少的位数就能完成编址，从而也可以减少指令的字长，以及访存次数
 
 
 
