--- a/docs/c-4.4汇编.md
+++ b/docs/c-4.4汇编.md
@@ -105,3 +105,19 @@ https://zhuanlan.zhihu.com/c_1235568790944612352
 - 其实提供这么多寻址方式，只是方便了我们在编程的时候，为结构化数据的处理提供了方便。
 
 # 9. 程序转移指令
+- 可以修改IP，或同时修改CS和IP的指令统称为转移指令。概括的讲，转移指令就是可以控制CPU执行内存中某处代码的指令。
+- 8086CPU的转移指令有以下几类
+    - 只修改IP时，称为段内转移，比如：jmp ax
+    - 同时修改cs和ip时，称为段间转移 比如：jmp 1000：0
+    - 由于转移指令对ip对修改范围不同，段内转移又分为：短转移和近转移
+- 8086cpu的转移指令分为以下几类
+    - 无条件转移 jmp
+    - 条件转移指令
+    - 循环指令
+    - 过程
+    - 中断
+- offset操作符 功能是取得标号的偏移地址
+- jmp short 标号   实现的是段内短转移
+- cpu在执行jmp指令短时候 并不需要转移短目的地址 而是转移的位移
+- jcxz为有条件转移指令 cx=0才执行 否则什么也不做
+- loop指令 cx=cx-1 若cx！=0 才转移
