c7 finish 操作数操作码  寻址方式

--- a/docs/c-4.3计算机组成原理.md
+++ b/docs/c-4.3计算机组成原理.md
@@ -668,6 +668,151 @@
         - 对于围绕寄存器进行的指令，也能直接减少访存次数
         - 如果指令的操作数，保存位置，下一条指令都位于寄存器中，那么执行指令的过程中甚至可以做到不访存
         - 当指令的地址指向寄存器时，由于计算机寄存器数量/容量均有限，只需要很少的位数就能完成编址，从而也可以减少指令的字长，以及访存次数
+- 7.2 操作数类型和操作类型
+    - 机器字长：CPU一次能处理数据的位数，通常与CPU的寄存器位数有关。 
+    - 存储字长：存储器中一个存储单元(存储地址)所存储的二进制代码的位数
+    - 7.2.1 操作数类型
+        - 操作数类型即计算机需要进行处理的数据类型，主要有以下四种形式
+            - 1.地址，例如跳转指令，或下一条需要执行的指令地址，地址可分为绝对地址（无符号数）和相对地址（有符号数）
+    
+            - 2.数字，包括定点数，浮点数
+            
+            - 3.字符，以ASCII码形式给出
+        
+            - 4.逻辑数，进行逻辑运算的数据，通常是一段二进制掩码
+    - 7.2.2 数据在存储器中的存放方式
+        - 数据在内存当中的布局模式，以存储字长64位，机器字长32位，半字/单子/双字的存储布局为例
+        - 从任意位置开始存储
+            - ![](figure/c7-9.jpg)
+            - 即有空就塞，这种模式能够充分利用内存空间，但在程序读取时，由于按存储字寻址访问
+
+            - 这种模式下一个数据可能被保存在两个存储字中，导致需要两次读入才能加载完数，中间还需清理无用数据
+            
+            - 并且CPU读取时只能固定读取64字长的前32位或后32位（地址最小偏移量），因此即便一个单子存储在一个存储字长内，如果它的位置不对齐，那么也需要读取两次
+
+        - 始终从一个存储字的起始位置开始存储
+            - ![](figure/c7-10.jpg)
+            - 这种模式下，在寻址后就可以立即进行数据的读取（无需字内移动），是速度最快的一种模式，但浪费了大量的空间
+        - 边界对齐法
+            - ![](figure/c7-11.jpg)
+            - 对于一个数据，它的存储起始地址编码位置必须整倍于它的位长度
+            - 这种方法是前两种方法的一个折中，虽然仍有所浪费，并且寻址后还需字内移址，但能保证可以以最少的次数读取需要的数据，无需清理无用数据
+    - 7.2.3 操作类型
+        - 数据传送
+            - 完成寄存器/存储器之间数据的交换，访存指令是数据传送指令的一类
+            - ![](figure/c7-12.jpg)
+        - 算术逻辑操作
+            - 包括定点数/浮点数加减乘除，自增自减，求补，与，或，非，异或，取反，位测试，位清楚等等，都是最基本的直接由硬件实现的运算功能
+        - 移位操作
+            - 包括算术移位，逻辑移位，循环移位（带进位或不带进位）
+        - 转移/跳转
+            - 无条件跳转JMP，可以让程序立即跳转执行目标地址下的指令
+        - 调用和返回
+            - 即编程中执行函数/方法的过程，由主程序调用子程序，进程转移至子程序运行，子程序还可调用其它子程序，形成嵌套
+            - 当执行return时程序会返回调用的位置，通常结合堆栈一类的数据结构的特性来实现调用的嵌套
+            - ![](figure/c7-13.jpg)
+        - 陷阱
+            - 陷阱指令时一种底层的直接由硬件实现的异常处理指令
+            - 当程序运行时发生意外事故的中断（主要是底层实现的算术逻辑运算异常），例如操作数非封，操作数越界，除数为0，会启用陷阱指令跳转至异常处理程序
+        - 输入输出
+            - 并不是所有指令集都有输入输出指令，如果I/O端口作为内存编址空间的一部分，那么只需要通过访存指令就可以完成输入输出操作
+            - 如果I/O端口有自己独立的编址空间，就需要有输入/输出指令，来明确指令给出的地址针对某个端口
+            - 输入输出指令的作用是完成CPU寄存器和I/O端口之间的数据交换
+
+- 7.3 寻址方式
+    - 寻址即确定本条指令的操作数地址和下一条要执行的指令地址
+    - 7.3.1 指令寻址
+        - 指令寻址主要有顺序寻址和跳跃寻址两种方式
+            - 多数情况下程序指令都是顺序存储的，通过PC自加1来完成顺序寻址，要注意的是这里的1累加的是1指令字长，从而由当前地址自增为下一条指令的起始地址
+            - 跳转寻址则是根据跳转指令，跳转到指定的地址位置，从该位置开始继续顺序向下执行程序指令
+            - ![](figure/c7-14.jpg)
+    - 7.3.2 数据寻址
+        - 指令中的地址码可以拆分成寻址特征码和形式地址码
+        - ![](figure/c7-15.jpg)
+        - 形式地址码是指令中使用的表示地址的代码，形式地址并不一定是真实的内存地址，需要根据寻址特征，进行一定的运算转为真实的内存地址（有效地址），或是通过其它运算操作，从而通过形式地址获取操作数
+        
+        - 立即寻址/立即数
+            - 立即寻址即形式地址A本身就是操作数（立即数），可以通过原码/补码形式给出，可以实定点数/浮点数，亦需要寻址特征码指明立即数的形式
+            - 由于指令被执行时已经加载到了寄存器，如果使用的立即数，则无需访存，直接在寄存器内将立即数传输至运算单元的输入（ACC）即可
+            - 形式地址A的位数会限制立即数的范围
+        - 直接寻址
+            - 即形式地址A本身就是真实的内存地址（有效地址），通过形式地址进行访存就能获取操作数
+            - ![](figure/c7-16.jpg)
+
+        - 隐含寻址
+            - 即之前提到的，围绕硬件资源（ACC）进行的操作，操作数的位置可以通过隐含的形式给出
+            - 这种隐含寻址的寻址特征码，是通过相应的操作码体现
+            - 例如一指令加法操作码出现时，就已经表明了只需取一个操作数，另一个操作数就是ACC中的数据
+            - ![](figure/c7-18.jpg)
+
+        - 间接寻址
+            - 有效地址由形式地址间接提供，这情况下形式地址也是真实的内存地址，但该地址下内存中的数据并不是操作数，而是操作数的地址（C语言中的指针）
+            - ![](figure/c7-19.jpg)
+            - 通过间接寻址，可以扩大寻址范围，形式地址A的范围有限，但对应到内存中的数据字长，可以用更大的空间存储范围更广的地址，并且我们只需更换相应内存地址下的地址数据就可以达到更换操作数的效果，有利于程序的修改，代码的复用
+            - 例如，我们将主程序记录的断点位置，存储到内存地址A下，当子程序执行完后，通过间接寻址的JUMP指令，即可返回主程序保存的断点位置，继续执行主程序
+            - ![](figure/c7-20.jpg)
+        - 寄存器寻址
+            - 即形式地址给出的是寄存器地址（寄存器编号），代表操作数位于该编号下的寄存器中
+            - 使用寄存器寻址无需访存，执行速度快，并且由于寄存器个数有限，可缩短指令字长
+            - ![](figure/c7-21.jpg)
+
+        - 寄存器间接寻址
+            - 即形式地址给出的寄存器编号，对应的寄存器数据是操作数内存的真实地址
+            - 这种情况下仍需要访存来获取操作数，但由于操作数地址在寄存器中便于即时修改，因此这种方式可以很方便的实现循环程序
+            - ![](figure/c7-22.jpg)
+        - 基址寻址
+            - 采用专用寄存器作为基址寄存器，这种情况下形式地址A就是一个累加值/偏移量，将基值寄存器中的地址累加形式地址A，即可得到操作数的真实内存地址
+            - ![](figure/c7-23.jpg)
+            - 采用通用寄存器作为基址寄存器，这种情况下形式地址是两部分，一部分是作为基址寄存器的编号，另一部分是累加值/偏移量
+            - 用户可以指定那个通用寄存器作为基址寄存器，但基址寄存器内容仍由操作系统决定
+            - ![](figure/c7-24.jpg)
+
+        - 变址寻址
+            - 但与基址寻址不同的是，IX变址寄存器中的内容可以由用户指定，并在程序执行过程中动态修改，变址寻址有利于实现数组的循环处理程序
+            - ![](figure/c7-25.jpg)
+            - ![](figure/c7-26.jpg)
+
+        - 相对寻址
+            - 即相对于PC的值，累加形式地址给出的偏移量获得操作数地址
+            - 这种方法有利于程序浮动（程序打破顺序存储），广泛应用于转移指令中
+            - 但要注意的是相对寻址的偏移量与指令的字长密切相关，并且在现代计算机中，当跳转指令被取出时PC已经发生了自增，因而相对寻址的偏移量需要考虑PC的自增问题
+            - ![](figure/c7-27.jpg)
+            - ![](figure/c7-28.jpg)
+
+        - 堆栈寻址
+            - ![](figure/c7-29.jpg)
+            - 以硬堆栈为例，栈顶地址由SP指出，进栈操作SP--，出栈操作SP++
+            - 这里的自减1和自加1，对应一个数据单元的字节长
+
+- 7.4 指令格式举例
+    - 7.4.1 设计指令格式时的考虑
+        - 指令系统应具有向后兼容的特性，即使用早期版本指令系统编写的程序，除大版本更迭，断代外，应能在支持新版本指令系统的硬件上正常运行
+        
+        - 指令的个数，指令与操作的类型、操作频率的对应
+        
+        - 操作数据的类型，如何区分数据类型
+        
+        - 指令格式，字长是否固定，操作码是否扩展，地址码的位数个数、寻址方式，寄存器个数（决定编号长度）
+    - 7.4.2 Intel 8086
+        - ![](figure/c7-30.jpg)
+- 7.5 RISC与CISC
+    - RISC（Reducced Intruction Set Computer）精简指令集计算机，与之相对的CISC（Complex Instruction Set Computer）复杂指令集计算机
+    - RISC 只选用使用频率较高的简单指令，和少数频率不高但必要的指令，对于复杂的功能由简单指令组合实现
+    - CISC：指令系统庞大复杂，各种指令使用频度相差较大
+    - RISC能充分利用VLSI芯片的面积，对于简单程序能提高计算机运算速度，便于芯片的设计制作，提高可靠性，优化编译支持高级语言
+    - CISC指令能力强，寻址方式多样，通过微程序控制技术长，有利于指令集的兼容性
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
