c8 init cpu结构与指令周期

--- a/docs/c-4.3计算机组成原理.md
+++ b/docs/c-4.3计算机组成原理.md
@@ -802,6 +802,113 @@
     - RISC能充分利用VLSI芯片的面积，对于简单程序能提高计算机运算速度，便于芯片的设计制作，提高可靠性，优化编译支持高级语言
     - CISC指令能力强，寻址方式多样，通过微程序控制技术长，有利于指令集的兼容性
 
+# 第八章 CPU的结构和功能
+- 本章中我们将在第七章的基础上，介绍CPU的内部组成和功能实现，讲解CPU执行、处理指令的原理和方法，如何应用指令流水技术提高硬件执行指令的速度，以及CPU的中断系统
+
+- 8.1 CPU的结构与功能
+    - CPU的控制器和运算器分别具有以下功能
+    - 控制器：
+        - 从内存单元中读取指令
+    
+        - 解码指令
+        
+        - 执行指令，发出各种操作命令，控制相应的部件有序完成指令操作
+        
+        - 控制程序输入就结果的输出
+        
+        - 总线管理
+        
+        - 处理异常情况和特殊请求
+
+    - 运算器：
+    
+        - 实现指令所对应的算术/逻辑运算
+
+    - CPU的功能可总结为
+        - 指令控制：读取解码有序执行指令
+        
+        - 操作控制：有序的发出各种控制信号控制相应的部件完成质量操作
+        
+        - 时序控制：指令的有序执行，操作信号的有序发出
+        
+        - 处理中断：处理异常情况和特殊请求
+        
+        - 数据加工：完成由硬件实现的基础算术/逻辑运算
+    - CPU基本结构框图
+        - ![](figure/c8-1.jpg)
+        - 外连控制总线/数据总线/地址总线
+
+        - 其中控制总线为双向，即传输CPU的控制信号，又回传部件的控制反馈
+        
+        - 数据总线双向，即需要将CPU的运算结构保存到存储器，又需要从存储器中读取操作数
+        
+        - 地址总线为单向，只由CPU解码指令后发出地址信号，进行外部寻址
+        - 指令的控制需要PC控制电路控制指令有序读取、解码、指令，以及IR寄存器保存读入的指令
+
+        - 操作控制和时间控制需要CU时序电路（8.3节将详细介绍）
+        
+        - 对于RISC，CU可采用硬连线组合逻辑实现，而对于CISC，CU可采用微程序的方式实现
+        
+        - 数据加工由运算电路和相应的寄存器构成的ALU算术运算单元完成（第六章已详细介绍）
+        
+        - 此外中断处理需要中断系统来完成（8.4节将详细介绍）
+
+- 8.2 CPU的寄存器
+    - 用户可见的寄存器
+        - 1.通用寄存器
+            - 可通过上层机器语言编程，存放指定信息的寄存器，可以保存操作数/中间结果，可作为某种寻址方式所需的专用寄存器
+        
+        - 2.数据寄存器
+            - 专用于存放操作数的寄存器，用户可读写寄存器中的数据，数据寄存器对于定点/浮点数有针对性的特化，两个数据寄存器可以拼接在一起保存双倍字长的数据（例如乘法运算中的ACC+MQ）
+
+        - 3.地址寄存器
+            - 专用于存放地址的寄存器，这类寄存器会连接外部地址总线，向外部发送寻址信号，其位数应满足地址范围，例如8086中的段基址，栈指针寄存器
+        - 4.条件码寄存器
+            - 存放运算的中间结果，运算的状态信息（例如正、负、零、溢出、进位），这类寄存器会连接逻辑判断电路，作为程序分支的控制依据
+
+        - 控制寄存器
+            - CPU操作控制中需要使用到的寄存器，例如从内存中读取命令，数据的传递流程
+            - ![](figure/c8-2.png)
+            - 其中M是存储体，MAR MDR IR 都是用户不可见的寄存器，而PC是用户可见的寄存器
+        - 状态寄存器
+            - 条件码寄存器是状态寄存器的一类，是用户可见的
+            
+            - 在程序中断，保存程序断点的隐指令操作中，保存硬件/软件信息的PSW程序状态字寄存器是另一类状态寄存器
+            
+            - PSW是由计算机硬件设计者，将大量的，各类硬件/软件信息进行统一集中存储用的寄存器，是用户不可见的
+            
+            - 通过程序状态字的切换就可交换程序执行现场
+
+- 8.3 指令周期
+    - 8.3.1 指令周期的基本概念
+        - 指令周期是完成一条指令的全部时间
+
+        - 完成一条指令可分为取指阶段（读取指令，解码分析）和执行阶段（发出控制信号，控制相应部件完成指令操作）
+        
+        - 针对于运算类指令的执行阶段的操作为：取操作数，运算得到结果，保存结果
+
+        - ![](figure/c8-3.jpg)
+        - 各阶段周期长度，受时序控制，均是最短时钟周期的整数倍
+        - 取指周期长度固定，所有指令都具有取值周期
+
+        - 一些指令可能不具有执行周期，例如NOP空指令
+        
+        - 一些指令取值周期和执行周期等长，例如加法指令
+        
+        - 一些指令执行阶段可能需要更长的时轴周期，例如乘法指令
+        - ![](figure/c8-4.jpg)
+        - 此外对于间接寻址的指令，需要多次访存才能读取操作数，因而可以在取指周期后加入一个间址周期，用于读取/寻找操作数的地址
+        - ![](figure/c8-5.jpg)
+            - 间址周期完成多次寻址读取，直到找到操作数的地址，再进入执行周期，读取操作数，完成运算，保存结果
+
+        - 对于指令中断的支持，我们需要在指令周期末尾加入中断周期，来检测是否有中断请求，是否需要相应中断，并保存程序断点
+        - ![](figure/c8-6.png)
+        - ![](figure/c8-7.jpg)
+        - CPU工作周期的标值
+            - 分析指令周期的各阶段，我们不难发现各个阶段都有访存操作
+            - ![](figure/c8-8.jpg)
+            - 因此我们需要设置标识，用于标记指令周期的子阶段，以便控制器发出读/写控制命令，完成各阶段中特定寄存器与存储器之间的数据交换
+            - ![](figure/c8-9.jpg)
 
 
 
